--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+		<artifactId>commons-email</artifactId>
+		<version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
