--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,15 @@
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
-		<artifactId>commons-email</artifactId>
-		<version>1.4</version>
+            <artifactId>commons-email</artifactId>
+            <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
